[package]
name = "distributed-calculator-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tarpc = { version = "0.30", features = ["serde-transport"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
anyhow = "1.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"